tests/interpreter/unary-expression-minus-non-number.stderr
error: cannot apply unary operator '-' to type 'String'
 --> $DIR/unary-expression-minus-non-number.lox:1:1
  |
1 | -"foo";
  | ^^^^^^
